--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "universal-cookie": "^7.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.15",
