--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.15.7",
     "@mui/x-charts": "^6.19.3",
     "@reduxjs/toolkit": "^2.1.0",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
