--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
+    "lodash": "^4.17.21",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
