--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
     "@mui/x-charts": "^6.19.3",
+    "@mui/x-tree-view": "^6.17.0",
     "@reduxjs/toolkit": "^2.1.0",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
