--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.1.2",
+    "@testing-library/react": "^14.2.1",
     "@types/node": "^20.11.15",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -45,6 +46,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.2.2",
     "unocss": "^0.58.4",
