--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build": "npm run test && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "jest --silent",
+    "test:watch": "jest --watch",
+    "test:debug": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
